example/Ingress-nginx-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
spec:
  ingressClassName: nginx
  rules:
    # update to your domain
    - host: <your-domain.example.com>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: <services-name>
                port:
                  number: 80
